Tests for Task1B and Task1E are done

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ test:
   # Install Python packages required to run code. Add any additional
   # packages your code needs require here.
   - pip install dateutils flake8 matplotlib numpy pytest requests
+  - pip install haversine
 
   # flake8 static code and style testing. Enable for extra testing.
   # - python -m flake8 .
@@ -14,6 +15,11 @@ test:
 
   # Run deliverables. Add your deliverables to the test system here.
   - python Task1A.py
+  - python Task1B.py
+  - python Task1C.py
+  - python Task1D.py
+  - python Task1E.py
+  - python Task1F.py
 
   - python Task2A.py
   - python Task2D.py
